--- a/src/View/form/Form_BC.form
+++ b/src/View/form/Form_BC.form
@@ -269,8 +269,8 @@
                   <Properties>
                     <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                       <StringArray count="3">
-                        <StringItem index="0" value="T&#x103;ng d&#x1ea7;n"/>
-                        <StringItem index="1" value="Gi&#x1ea3;m d&#x1ea7;n"/>
+                        <StringItem index="0" value="Doanh thu cao nh&#x1ea5;t"/>
+                        <StringItem index="1" value="Doanh thu th&#x1ea5;p nh&#x1ea5;t"/>
                         <StringItem index="2" value=" "/>
                       </StringArray>
                     </Property>
