--- a/src/form/Form_BH.form
+++ b/src/form/Form_BH.form
@@ -745,7 +745,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="14" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Thanh To&#xe1;n"/>
+            <Property name="text" type="java.lang.String" value="Thanh "/>
           </Properties>
         </Component>
       </SubComponents>
