--- a/src/form/Form_BH.form
+++ b/src/form/Form_BH.form
@@ -216,7 +216,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="12" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="X&#xf3;oa"/>
+            <Property name="text" type="java.lang.String" value="X&#xf3;oaa"/>
           </Properties>
         </Component>
         <Container class="javax.swing.JScrollPane" name="jScrollPane2">
