--- a/src/form/Form_HoaDon.form
+++ b/src/form/Form_HoaDon.form
@@ -299,6 +299,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Xu&#x1ea5;t Excel"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_xuatExcelActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btn_huyHD">
               <Properties>
