--- a/src/View/form/Form_KH.form
+++ b/src/View/form/Form_KH.form
@@ -76,7 +76,7 @@
                       </Group>
                       <EmptySpace max="32767" attributes="0"/>
                   </Group>
-                  <Component id="jPanel4" alignment="0" pref="926" max="32767" attributes="0"/>
+                  <Component id="jPanel4" alignment="0" pref="906" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
@@ -177,7 +177,7 @@
                                   <Component id="lbl_tongtienKH" min="-2" pref="121" max="-2" attributes="0"/>
                               </Group>
                           </Group>
-                          <EmptySpace pref="137" max="32767" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -350,8 +350,8 @@
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jLabel1" max="32767" attributes="0"/>
-                  <Component id="jPanel5" alignment="0" pref="926" max="32767" attributes="0"/>
-                  <Component id="Header" alignment="0" pref="926" max="32767" attributes="0"/>
+                  <Component id="jPanel5" alignment="0" pref="906" max="32767" attributes="0"/>
+                  <Component id="Header" alignment="0" pref="906" max="32767" attributes="0"/>
                   <Component id="jScrollPane1" alignment="1" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
